# app_senlocation

./: .gitignore  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  PROJECT_SUMMARY.md  README.md  SHOWCASE.md  SenLocation.pro  config.json  package.json  qml.qrc
android/: AndroidManifest.xml
docs/: API.md  ARCHITECTURE.md  USER_GUIDE.md
qml/: AddPropertyPage.qml  HomePage.qml  LoginPage.qml  ProfilePage.qml  PropertyDetailPage.qml  PropertyListPage.qml  RegisterPage.qml  RentalAgreementPage.qml  Style.qml  main.qml
qml/components/: CustomButton.qml  CustomTextField.qml  PropertyCard.qml
src/: apiclient.cpp  apiclient.h  authmanager.cpp  authmanager.h  contractmanager.cpp  contractmanager.h  disputemanager.cpp  disputemanager.h  main.cpp  paymentmanager.cpp  paymentmanager.h  propertymanager.cpp  propertymanager.h  usermanager.cpp  usermanager.h
